[package]
name = "alacritty-wal"
version = "0.1.0"
authors = ["abyss <derribado@tutanota.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
dirs-next = "1.0.1"
enum-map = "0.6.2"
anyhow = "1.0.31"
structopt = "0.3.15"
